--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,16 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: 天行健，君子以自强不息
+email: veryverygood119@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "/blog"   # 仓库名，如果是根仓库就留空 ""
+baseurl: ""   # 仓库名，如果是根仓库就留空 ""
 url: "https://txj-jzyzqbx.github.io"
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  txj-jzyzqbx
 
 # Build settings
 theme: minima
